--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -89,5 +89,8 @@
         </div>
       </form>
     </div>
+	  <div class ="banner">
+	  <img src ="https://nextcloud.nwu.ac.za/index.php/s/nEDitAaKTq2PcjC">
+	  </div>
   </div>
 </nav>
