--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -90,7 +90,7 @@
       </form>
     </div>
 	  <div class ="banner">
-	  <img src ="https://nextcloud.nwu.ac.za/index.php/s/nEDitAaKTq2PcjC">
+	  <img src ="https://drive.google.com/file/d/1-EAfB1IO0DfKp2hq2kbx4yxQu5LFuYDD/view?usp=sharing">
 	  </div>
   </div>
 </nav>
