--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -89,8 +89,6 @@
         </div>
       </form>
     </div>
-	  <div class ="banner">
-	 <img src = "![CarpentryConnect South Africa Banner2160x1080](https://user-images.githubusercontent.com/20354359/121011329-c50e4280-c796-11eb-9c3f-fa16c6e3952e.jpg)">
-	  </div>
+	![CarpentryConnect](https://user-images.githubusercontent.com/20354359/121011329-c50e4280-c796-11eb-9c3f-fa16c6e3952e.jpg)
   </div>
 </nav>
