--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -89,6 +89,6 @@
         </div>
       </form>
     </div>
-	![CarpentryConnect](https://user-images.githubusercontent.com/20354359/121011329-c50e4280-c796-11eb-9c3f-fa16c6e3952e.jpg)
+	<img src="https://user-images.githubusercontent.com/20354359/121011329-c50e4280-c796-11eb-9c3f-fa16c6e3952e.jpg">
   </div>
 </nav>
