--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -90,7 +90,7 @@
       </form>
     </div>
     <div class= "Banner">		  
-	<a href = "https://carpentryconnect.github.io/za.carpentryconnect.org/">
+	<a href = "https://za2021.carpentryconnect.org/">
 	<img src="https://user-images.githubusercontent.com/20354359/121011329-c50e4280-c796-11eb-9c3f-fa16c6e3952e.jpg" width: 100%; height: auto;>
 	    </a>
 	  </div>	    
