--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -91,7 +91,7 @@
     </div>
     <div class= "Banner">		  
 	<a href = "https://za2021.carpentryconnect.org/">
-	<img src="https://user-images.githubusercontent.com/20354359/122729501-85a52300-d279-11eb-8e11-bc776092bd7d.jpg" width=100% height=auto>
+	<img src="https://user-images.githubusercontent.com/20354359/122729501-85a52300-d279-11eb-8e11-bc776092bd7d.jpg" width=100% height=50%>
 	    </a>
 	  </div>	    
   </div>
