--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -1,6 +1,11 @@
 {% comment %}
   Advertising box at the top of a workshop website home page.
 {% endcomment %}
+  <div class= "Banner">		  
+	 <a href = "https://za2021.carpentryconnect.org/">
+	 <img src="https://user-images.githubusercontent.com/20354359/122729501-85a52300-d279-11eb-8e11-bc776092bd7d.jpg" width=100% height=auto>
+	    </a>
+	</div>	
 <div class="jumbotron">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
