--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -3,7 +3,7 @@
 {% endcomment %}
   <div class= "Banner">		  
 	 <a href = "https://za2021.carpentryconnect.org/">
-	 <img src="https://user-images.githubusercontent.com/20354359/122729501-85a52300-d279-11eb-8e11-bc776092bd7d.jpg" width=100% height=auto>
+	 <img src="https://user-images.githubusercontent.com/20354359/122729501-85a52300-d279-11eb-8e11-bc776092bd7d.jpg" scrolling="auto" width="100%" height="100%">
 	    </a>
 	</div>	
 <div class="jumbotron">
